# mavis-data-gp-it-suppliers

./: .gitignore  .tool-versions  README.md  pyproject.toml
data/: gp_suppliers.csv
