[project]
name = "gpad-suppliers"
version = "0.1.0"
description = "Python scripts for compiling a mapping of GP to GPIT supplier from appointments data"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.5",
]
